# hello-backend

./: README.md  pyproject.toml  test-requirements.txt
docs/: Task.md
docs/lecture/: 2.Hello-Backend.md  3.后端常见答疑.md  wiki共学营大致逐字稿.md
src/hello_backend/: __init__.py  main.py
tests/: test_main.py
